# apis-oebl-export

./: .gitignore  oebl_relax_ng_v1.rng  pyproject.toml
.github/workflows/: xmllint.yml
.github/workkflows/: xmllint.yml
apis_oebl_export/: create_harmonized_xmls.py  export.py
templates/: template.xml
