[tool.poetry]
name = "apis-oebl-export"
version = "0.1.0"
description = "Export APIS data to xml"
authors = ["Birger Schacht"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
